# Eir

./: .gitignore  DTMC.py  Deterministic.py  LICENSE  README.md  eir.tex  mymain.py  mymain2.py  setup.cfg  setup.py
Eir/: README.md  __init__.py  exceptions.py  utility.py
Eir/DTMC/: __init__.py
Eir/Deterministic/: CompartmentalModel.py  SEIR.py  SIR.py  SIRD.py  SIRS.py  SIRV.py  SIS.py
docs/Deterministic/: SEIR.md  SIR.md  SIRD.md  SIRS.md  SIRV.md  SIS.md
docs/unitTest/: how_to_run.md  test_details.md
examples/: Deterministic_Examples.ipynb  Static Spatial Models.ipynb
paper/: eir.tex  paper.bib  paper.md  references.bib
src/: .env  Deterministic.py  SIRD.py  SIS.py  __init__.py  exceptions.py  test2.py  utility.py
src/DTMC/: DTMCSIR.py  DTMCSIS.py  dtmc.py
src/Deterministic/: CompartmentalModel.py  SEIR.py  SIR.py  SIRD.py  SIRS.py  SIRV.py  SIS.py
src/simulation/: DTMC.py  Deterministic.py  HubModel2.cpp  HubModel2.h  HubModel2.py  ctmc.py  deterministic.py  dtmc.py  hub.py  hub_output  hubcpp.cpp  utility.py
src/simulation/HubModel/HubModel/: CMakeLists.txt  GenRand.cpp  GenRand.h  Hub.cpp  Hub.h  Person.cpp  Person.h  RadialMain.cpp  StrongInfect.cpp  StrongInfect.h
src/tests/: hub_output  test.py
tests/: all_tests.sh
tests/Deterministic/: SEIR.csv  SEIR_a.csv  SIR.csv  SIRD.csv  SIRD_a.csv  SIRS.csv  SIRS_a.csv  SIRV.csv  SIRV_a.csv  SIR_a.csv  SIS.csv  test_Deterministic.sh  test_SEIR.py  test_SIR.py  test_SIRD.py  test_SIRS.py  test_SIRV.py  test_SIS.py
tests/Hub/: HubSEIR.csv  HubSEIRD.csv  HubSEIRS.csv  HubSEIRSD.csv  HubSEIRSV.csv  (+32 more)
(+268 files in other folders)
